--- a/application/views/scripts/index/unsigned.phtml
+++ b/application/views/scripts/index/unsigned.phtml
@@ -11,7 +11,7 @@ $this->loginform = Ml_Model_Credential::loginForm();
 <div class="row">
 <div class="span10" id="home-page">
 <h2>Uploading and sharing your files is now easy and free. <small>Create your Plifk account now.</small></h2>
-<img src="<?php echo $this->staticversion("/images/globe.jpg")?>" alt="Share your files with the world." width="170" height="141" />
+<img src="<?php echo $this->staticVersion("/images/globe.jpg")?>" alt="Share your files with the world." width="170" height="141" />
 <p class="home-info">
 Get your www.plifk.com/username</p>
 <ul id="home-buttons">
@@ -28,7 +28,7 @@ echo $this->fileSize($config['share']['monthlyLimit'] * 1024 * 1024 * 8);
 <p><small><a href="<?php echo $this->url(array(), "recover") ?>">Lost your username or password?</a><br />
 Not already a user? <a href="<?php echo $this->url(array(), "join"); ?>">Join us</a>.</small></p>
 <a href="http://www.twitter.com/plifk" class="new-window"><img src="<?php
-echo $this->staticversion("/images/follow_bird_us-b.png");
+echo $this->staticVersion("/images/follow_bird_us-b.png");
 ?>" alt="Follow Plifk on Twitter" /></a>
 </div>
 </div>
