--- a/application/views/scripts/login/index.phtml
+++ b/application/views/scripts/login/index.phtml
@@ -5,10 +5,10 @@ $this->headTitle("Login screen");
 <div class="span10">
 <?php if ($this->errorlogin): ?>
 <h2>Duh! Something is wrong!</h2>
-<img src="<?php echo $this->staticversion("/illustrations/girl-showing-tongue.jpg"); ?>" alt="" width="424" height="283" />
+<img src="<?php echo $this->staticVersion("/illustrations/girl-showing-tongue.jpg"); ?>" alt="" width="424" height="283" />
 <?php else: ?>
 <h2>Come in! We are waiting for you!</h2>
-<img src="<?php echo $this->staticversion("/illustrations/girl-inviting.jpg"); ?>" alt="" width="424" height="283" />
+<img src="<?php echo $this->staticVersion("/illustrations/girl-inviting.jpg"); ?>" alt="" width="424" height="283" />
 <?php endif; ?>
 </div>
 <div class="span5">
