--- a/application/views/scripts/static/about.phtml
+++ b/application/views/scripts/static/about.phtml
@@ -26,7 +26,7 @@ $this->headTitle("About Plifk", "SET");
 <h4>Logo</h4>
 <div class="row">
 <div class="span6">
-<img src="<?php echo $this->staticversion("/images/logo-m.png") ?>" width="302" height="227" alt="Plifk's logo" />
+<img src="<?php echo $this->staticVersion("/images/logo-m.png") ?>" width="302" height="227" alt="Plifk's logo" />
 </div>
 <div class="offset2 span7">
 <h5>How to use</h5>
@@ -35,25 +35,25 @@ Plifk is <b>#000000</b> (plain black) and the symbol with out the pencil head is
 The font used for the typography is <b>Leelawadee Regular</b>. Concept by Diego Carneiro.</p>
 <h5>Sizes:</h5>
 <ul>
-<li><a href="<?php echo $this->staticversion("/images/logo-m.png") ?>" title="Medium Plifk logo">medium</a> (302 x 227)</li>
-<li><a href="<?php echo $this->staticversion("/images/logo-b.png") ?>" title="Large Plifk logo">large</a> (1006 x 755)</li>
-<li><a href="<?php echo $this->staticversion("/images/logo.svg") ?>" title="Plifk logo vector">scalable vector</a> (.svg)</li>
+<li><a href="<?php echo $this->staticVersion("/images/logo-m.png") ?>" title="Medium Plifk logo">medium</a> (302 x 227)</li>
+<li><a href="<?php echo $this->staticVersion("/images/logo-b.png") ?>" title="Large Plifk logo">large</a> (1006 x 755)</li>
+<li><a href="<?php echo $this->staticVersion("/images/logo.svg") ?>" title="Plifk logo vector">scalable vector</a> (.svg)</li>
 </ul>
 </div>
 </div>
 <h4>Symbol</h4>
 <div class="row">
 <div class="span6">
-<img src="<?php echo $this->staticversion("/images/symbol-m.png") ?>" width="302" height="236" alt="Plifk's symbol" />
+<img src="<?php echo $this->staticVersion("/images/symbol-m.png") ?>" width="302" height="236" alt="Plifk's symbol" />
 </div>
 <div class="offset2 span7">
 <h5>How to use</h5>
 <p>This symbol should be used alone or at the left side (never the right) of the word Plifk or another phrase related.  The .svg symbol contains transparency. The visual elements in it are considered to be in front of a plain white background.</p>
 <h5>Sizes:</h5>
 <ul>
-<li><a href="<?php echo $this->staticversion("/images/symbol-m.png") ?>" title="Medium Plifk symbol">medium</a> (302 x 236)</li>
-<li><a href="<?php echo $this->staticversion("/images/symbol-b.png") ?>" title="Large Plifk symbol">large</a> (1006 x 788)</li>
-<li><a href="<?php echo $this->staticversion("/images/symbol.svg") ?>" title="Plifk symbol vector">scalable vector</a> (.svg; uses alpha channel for the pencil-like effect)</li>
+<li><a href="<?php echo $this->staticVersion("/images/symbol-m.png") ?>" title="Medium Plifk symbol">medium</a> (302 x 236)</li>
+<li><a href="<?php echo $this->staticVersion("/images/symbol-b.png") ?>" title="Large Plifk symbol">large</a> (1006 x 788)</li>
+<li><a href="<?php echo $this->staticVersion("/images/symbol.svg") ?>" title="Plifk symbol vector">scalable vector</a> (.svg; uses alpha channel for the pencil-like effect)</li>
 </ul>
 </div>
 </div>
