--- a/application/views/scripts/static/tour.phtml
+++ b/application/views/scripts/static/tour.phtml
@@ -25,11 +25,11 @@ $monthlyLimit = $this->escape($this->fileSize($config['share']['monthlyLimit'] *
 <div id="tour-screenshots">
 <h3>Listing of the files shared by a user</h3>
 <p>
-<a href="http://www.plifk.com/henvic" class="new-window"><img src="<?php echo $this->staticversion("/images/tour/stream.v1.png") ?>" alt="A user file list example" width="446" height="346" /></a>
+<a href="http://www.plifk.com/henvic" class="new-window"><img src="<?php echo $this->staticVersion("/images/tour/stream.v1.png") ?>" alt="A user file list example" width="446" height="346" /></a>
 </p>
 <h3>Details about a file</h3>
 <p>
-<a href="http://www.plifk.com/henvic/114" class="new-window"><img src="<?php echo $this->staticversion("/images/tour/file-details.v1.png") ?>" alt="A file page example" width="446" height="346" /></a>
+<a href="http://www.plifk.com/henvic/114" class="new-window"><img src="<?php echo $this->staticVersion("/images/tour/file-details.v1.png") ?>" alt="A file page example" width="446" height="346" /></a>
 </p>
 <?php if(!$auth->hasIdentity()): ?><strong><a href="<?php echo $this->url(array(), "join") ?>" class="new-window">Join us</a></strong><?php endif; ?>
 </div>
