--- a/application/views/scripts/logout/index.phtml
+++ b/application/views/scripts/logout/index.phtml
@@ -19,7 +19,7 @@ if (! is_null(filter_input(INPUT_GET, "please", FILTER_UNSAFE_RAW)) ||
 <h2>Sign out of <?php echo $this->escape($config['applicationname']); ?></h2>
 <p>If you ever forget to logout from a public computer, sign out all other sessions from this page.</p>
 <h3>Last activity on this account</h3>
-<table class="zebra-striped">
+<table id="last-activity-table" class="zebra-striped">
 <thead>
 <tr>
 <th class="purple">#</th>
