--- a/application/views/scripts/profile/profile.phtml
+++ b/application/views/scripts/profile/profile.phtml
@@ -66,7 +66,7 @@ else:
 <small class="nodescr">(about not available)</small>
 <?php endif; ?>
 </p>
-<?php $avatar = $this->avatarprofile($userInfo); if($avatar): ?>
+<?php $avatar = $this->avatarProfile($userInfo); if($avatar): ?>
 <h3>User image</h3>
 <?php
 echo $avatar;
